--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
     "react-tagcloud": "^2.1.1",
+    "react-typing-animation": "^1.6.2",
     "web-vitals": "^1.1.2",
     "wordpos": "^2.1.0"
   },
